--- a/Spring/.settings/org.eclipse.wst.common.component
+++ b/Spring/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
             
     
-    <wb-module deploy-name="reservation">
+    <wb-module deploy-name="reservation-service">
                         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
@@ -22,7 +22,7 @@
                         
         
         <property name="component.inclusion.patterns"/>
-        <property name="context-root" value="reservation"/>
+        <property name="context-root" value="reservation-service"/>
                     
     
     </wb-module>
