--- a/Angular/src/app/modules/module-one/component-one/component-one.component.scss
+++ b/Angular/src/app/modules/module-one/component-one/component-one.component.scss
@@ -1,9 +1,14 @@
 .mat-header-cell {
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .mat-cell {
-    text-align: center;
-    justify-content:center;
-  }
+  flex-direction: column;
+  justify-content: center;
+}
+
+.mat-cell {
+  text-align: center;
+  justify-content: center;
+}
+
+.add {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
