Modified routing; Finished add/edit room

--- a/Angular/src/app/modules/app.component.html
+++ b/Angular/src/app/modules/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <a class="title" [routerLink]="['/']">{{ title }}</a>
+  <a class="title" [routerLink]="['/room']">{{ title }}</a>
 
   <div class="toolbar-spacer"></div>
 
